deleted the 3 in group

--- a/week3_day1.ipynb
+++ b/week3_day1.ipynb
@@ -469,9 +469,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abraham Lincoln\n",
+      "Andrew P Garfield\n",
+      "Connor Milliken\n",
+      "Jordan Alexander Williams\n",
+      "none\n",
+      "none\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Expected Output\n",
@@ -493,7 +506,7 @@
     "    for name in data.split('\\n'):\n",
     "        match = pattern.search(name)\n",
     "        if match:\n",
-    "            print(match.group(3))\n",
+    "            print(match.group())\n",
     "        else:\n",
     "            print('none')\n"
    ]
