changed time complexity

--- a/week3_day3.ipynb
+++ b/week3_day3.ipynb
@@ -314,7 +314,7 @@
     "\n",
     "find_item(random_list, 'given number')\n",
     "\n",
-    "#I'm guessing the time complexity is O(n^2) time - O(1)space, because of the nested if statement in the for loop?????????"
+    "#time complexity is O(n)"
    ]
   }
  ],
